# pnw

./: .gitignore  predict.py  pyproject.toml  requirements.txt  scores.npy  scores.py  test.csv  test.ipynb  train.py  translate.py
notebooks/: models.py  nlp.ipynb  preprocess.py
